k8s/base/canary/order-service-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-v2
  namespace: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
      version: v2
  template:
    metadata:
      labels:
        app: order-service
        version: v2
    spec:
      serviceAccountName: order-service
      containers:
        - name: order-service
          image: microservices-project-order-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
